# bioargo

./: README.rst  pyproject.toml
bioargo/: __init__.py  config.py  fileio.py  plot.py
tests/: test_bioargo.py
